@@ -113,6 +113,7 @@ David Chaum
 Nicolas Chauvat
 Michael Chermside
 Albert Chin-A-Young
+Adal Chiriliuc
 Tom Christiansen
 Vadim Chugunov
 David Cinege
